--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "babel ./client --out-file ./hosted/clientBundle.js",
+    "watch": "babel --watch ./client --out-file ./hosted/clientBundle.js",
+    "nodemon": "nodemon -e js,css,html --watch ./src --watch ./hosted ./src/server.js",
     "start": "node ./src/server.js",
     "pretest": "eslint ./src --fix",
     "test": "echo \"Tests complete\""
@@ -21,6 +23,9 @@
     "@babel/preset-react": "^7.14.5",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.10.1"
+    "eslint-plugin-import": "^1.10.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-nodemon": "^2.5.0",
+    "nodemon": "^2.0.13"
   }
 }
