--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "babel ./client --out-file ./hosted/clientBundle.js",
     "watch": "babel --watch ./client --out-file ./hosted/clientBundle.js",
     "nodemon": "nodemon -e js,css,html --watch ./src --watch ./hosted ./src/server.js",
+    "dev": "concurrently \"npm run watch\" \"npm run nodemon\"",
     "start": "node ./src/server.js",
     "pretest": "eslint ./src --fix",
     "test": "echo \"Tests complete\""
@@ -21,6 +22,7 @@
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
     "@babel/preset-react": "^7.14.5",
+    "concurrently": "^6.2.1",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.10.1",
