--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "bootstrap": "^5.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "socket.io": "^2.4.1"
   },
   "devDependencies": {
