--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.1",
+    "bootstrap-colorpicker": "^3.4.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "prop-types": "^15.7.2",
