--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "reinvented-color-wheel": "^0.4.0",
     "socket.io": "^2.4.1"
   },
   "devDependencies": {
