--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "babel ./client --presets @babel/preset-react --out-file ./hosted/clientBundle.js",
     "watch": "babel --watch ./client --presets @babel/preset-react --out-file ./hosted/clientBundle.js",
     "nodemon": "nodemon -e js,css,html --watch ./src --watch ./hosted ./src/server.js",
-    "dev": "concurrently \"npm run watch\" \"npm run nodemon\"",
+    "dev": "concurrently \"npm run watch\" \"npm run gulp\" \"npm run nodemon\" ",
+    "gulp": "gulp",
     "start": "node ./src/server.js",
     "pretest": "eslint ./src --fix",
     "test": "echo \"Tests complete\""
@@ -31,11 +32,17 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "concurrently": "^6.2.1",
+    "cssnano": "^5.0.8",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.10.1",
+    "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.5.0",
-    "nodemon": "^2.0.13"
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.0.0",
+    "nodemon": "^2.0.13",
+    "postcss": "^8.3.9",
+    "sass": "^1.43.2"
   }
 }
