--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^5.1.1",
     "bootstrap-colorpicker": "^3.4.0",
+    "bootstrap-icons": "^1.6.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "prop-types": "^15.7.2",
